created binary api-golang

--- a/devops-directive-docker-course-main/05-example-web-application/api-golang/Dockerfile
+++ b/devops-directive-docker-course-main/05-example-web-application/api-golang/Dockerfile
@@ -1,5 +1,13 @@
 FROM golang:1.19-alpine
+
 WORKDIR /app
-COPY . .
+
+COPY go.mod go.sum ./ # ---> instead of copying all files we are copying only files req for downloading dependencies
+
 RUN go mod download
-CMD ["go", "run", "./main.go"]
+
+COPY . .
+
+RUN go build -o api-golang # ---> we are creating binary and we execute evertime this binary
+
+CMD ["./api-golang"]
